--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,14 @@ NEXTAUTH_SECRET="your-secret-key-change-this-in-production"
 # GOOGLE_CLIENT_SECRET=""
 # GITHUB_ID=""
 # GITHUB_SECRET=""
+
+# Odds API (The Odds API - https://the-odds-api.com)
+# Get your free API key at: https://the-odds-api.com/
+ODDS_API_KEY="your-api-key-here"
+
+# Odds Polling Configuration
+POLL_INTERVAL_SECONDS="60"
+DEDUPE_INTERVAL_MINUTES="10"
+
+# Debug mode (set to "true" for verbose logging)
+# DEBUG="false"
