--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
     "db:migrate": "prisma migrate dev",
-    "db:seed": "tsx prisma/seed.ts"
+    "db:seed": "tsx prisma/seed.ts",
+    "poll-odds": "tsx jobs/pollOdds.ts",
+    "poll-odds:loop": "tsx jobs/pollOdds.ts -- --loop",
+    "poll-odds:dry": "tsx jobs/pollOdds.ts -- --dry"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
