--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@prisma/client": "^6.1.0",
     "@testing-library/react": "^16.3.1",
     "@vitejs/plugin-react": "^5.1.2",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.26",
     "jsdom": "^27.3.0",
     "lucide-react": "^0.468.0",
     "next": "^15.1.0",
