--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
     "@prisma/client": "^6.1.0",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@testing-library/react": "^16.3.1",
     "@vitejs/plugin-react": "^5.1.2",
     "class-variance-authority": "^0.7.1",
